# CodeLearning

./: .gitattributes
cplusplus/CatLearnOpenGL/: .gitignore  CMakeLists.txt  README.md
cplusplus/CatLearnOpenGL/includes/learnopengl/: camera.h  filesystem.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
cplusplus/CatLearnOpenGL/resources/: .gitignore
cplusplus/CatLearnOpenGL/src/1.getting_started/1.1.hello_window/: hello_window.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/1.2.hello_window_clear/: hello_window_clear.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/2.1.hello_triangle/: hello_triangle.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle_indexed.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/2.3.hello_triangle_exercise1/: hello_triangle_exercise1.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/3.3.shaders_class/: 3.3.shader.vs  shaders_class.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/3.4.shaders_exercise1/: shaders_exercise1.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/3.5.shaders_exercise2/: shaders_exercise2.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/3.6.shaders_exercise3/: shaders_exercise3.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/4.1.textures/: 4.1.texture.fs  textures.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/4.2.textures_combined/: 4.2.texture.fs  textures_combined.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/4.3.textures_exercise1/: textures_exercise1.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/4.4.textures_exercise2/: textures_exercise2.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/4.5.textures_exercise3/: textures_exercise3.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/4.6.textures_exercise4/: 4.6.texture.fs  textures_exercise4.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/5.1.transformations/: transformations.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/5.2.transformations_exercise1/: transformations_exercise1.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/5.3.transformations_exercise2/: transformations_exercise2.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_systems.vs  coordinate_systems.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/6.2.coordinate_systems_depth/: coordinate_systems_depth.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/6.3.coordinate_systems_multiple/: coordinate_systems_multiple.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/7.1.camera_circle/: 7.1.camera.vs  camera_circle.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/7.2.camera_keyboard_dt/: camera_keyboard_dt.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/7.3.camera_mouse_zoom/: camera_mouse_zoom.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/7.4.camera_class/: camera_class.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/7.5.camera_exercise1/: camera_exercise1.cpp
cplusplus/CatLearnOpenGL/src/1.getting_started/7.6.camera_exercise2/: camera_exercise2.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/1.1.colors/: colors.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.1.basic_lighting_ambient/: 2.1.basic_ambient.fs  basic_lighting_ambient.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.2.basic_lighting_diffuse/: 2.2.basic_diffuse.fs  basic_lighting_diffuse.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.3.basic_lighting_specular/: 2.3.basic_specular.fs  basic_lighting_specular.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.4.basic_lighting_exercise1/: basic_lighting_exercise1.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.5.basic_lighting_exercise2/: 2.5.basic_specular.fs  2.5.basic_specular.vs  basic_lighting_exercise2.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.6.basic_lighting_exercise3/: 2.6.basic_specular.fs  2.6.basic_specular.vs  basic_lighting_exercise3.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/2.7.basic_lighting_exercise4/: basic_lighting_exercise4.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/3.1.materials/: materials.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/3.2.materials_exercise1/: 3.2.materials.fs  materials.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/4.1.lighting_maps_diffuse_map/: 4.1.lighting_maps.fs  lighting_maps_diffuse_map.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/4.2.lighting_maps_specular_map/: 4.2.lighting_maps.fs  lighting_maps_specular_map.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/4.3.lighting_maps_exercise2/: 4.3.lighting_maps.fs  lighting_maps_exercise2.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/4.4.lighting_maps_exercise3/: 4.4.lighting_maps.fs  lighting_maps_exercise3.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/4.5.lighting_maps_exercise4/: 4.5.lighting_maps.fs  lighting_maps_exercise4.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/5.1.light_casters_directional/: 5.1.light_casters.fs  light_casters_directional.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/5.2.light_casters_point/: 5.2.light_casters.fs  light_casters_point.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/5.3.light_casters_spot/: 5.3.light_casters.fs  light_casters_spot.cpp
cplusplus/CatLearnOpenGL/src/2.lighting/5.4.light_casters_spot_soft/: 5.4.light_casters.fs  light_casters_spot_soft.cpp
cplusplus/CatLearnQtOpenGL/: CMakeLists.txt
cplusplus/CatLearnSDL2/: CMakeLists.txt
cplusplus/CatLearnSDL2/src/1.sdl_basic/: sdl_basic.cpp
cplusplus/CatLearnSDL2/src/2.sdl_window/: sdl_window.cpp
cplusplus/CatLearnSDL2/src/3.sdl_event/: sdl_event.cpp
cplusplus/CatLearnSDL2/src/4.sdl_thread/: sdl_thread.cpp
cplusplus/CatLearnSDL2/src/5.sdl_yuv/: sdl_yuv.cpp
cplusplus/CatLearnSDL2/src/6.sdl_pcm/: sdl_pcm.cpp
(+76 files in other folders)
